WIP fix for mapAccumulator and more tests